# robotlb

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  cliff.toml  renovate.json5  tutorial.md
.ci/: release.sh
.github/workflows/: auto-tag.yml  release.yaml  tests.yaml
.opencode/skills/release/: SKILL.md
docs/: opentelemetry-tracing-analysis.md
helm/: Chart.yaml  values.yaml
helm/dashboards/: dashboard.yaml
helm/templates/: NOTES.txt  dashboard.yaml  deployment.yaml  prometheusrules.yaml  service.yaml  servicemonitor.yaml
helm/tests/: dashboard_test.yaml  prometheusrules_test.yaml  service_test.yaml  servicemonitor_test.yaml
src/: config.rs  consts.rs  error.rs  finalizers.rs  gateway.rs  health.rs  label_filter.rs  lb.rs  main.rs  metrics.rs  otel_tracing.rs  prometheus_exporter.rs  routes.rs  test_utils.rs
src/controller/: mod.rs  nodes.rs  status.rs
src/lb/: api.rs  config.rs  mod.rs  types.rs
