[package]
name = "robotlb"
version = "0.4.3"
edition = "2024"
readme = "README.md"

[dependencies]
async-trait = "0.1.89"
clap = { version = "4.5.21", features = ["derive", "env"] }
dotenvy = "0.15.7"
futures = "0.3.31"
hcloud = "0.25.0"
http-body-util = "0.1"
hyper = { version = "1.6", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
k8s-openapi = { version = "0.27.0", features = ["v1_35"] }
kube = { version = "3.0.0", features = ["runtime"] }
kube-leader-election = "0.43.0"
thiserror = "2.0.3"
prometheus = "0.13.4"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread", "signal", "net"] }
tokio-util = "0.7"
tower-http = { version = "0.6.6", features = ["util"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
debug = false
strip = true
